# Main_board

./: 100.zi  123.zi  450.zi  tets_list.tft  txt.zi
Control_board_2/: platformio.ini
Control_board_2/src/: main.c  main.h  stm32f4xx_it.c  stm32f4xx_it.h
Control_table_stm32_RVV/: README  boot.txt
Control_table_stm32_RVV/include/: const_valiues.h
Control_table_stm32_RVV/lib/Coordinate_Converter/: coord_convert.c  coord_convert.h
Control_table_stm32_RVV/lib/Endstops/: endstops.c  endstops.h
Control_table_stm32_RVV/lib/GCode_Parser/: gcode_parser.c  gcode_parser.h
Control_table_stm32_RVV/lib/Stepper_Motion/: stepper.c  stepper.h
Control_table_stm32_RVV/lib/UART_Handler/: uart_handler.c  uart_handler.h
Control_table_stm32_RVV/lib/Wire_Feeder/: feeder.c  feeder.h
Control_table_stm32_RVV/src/: main.c  main.h  stm32f4xx_it.c  stm32f4xx_it.h
Klipper/: com.txt  printer.cfg
PWM_convert/: platformio.ini
PWM_convert/src/: main.c
Testing/test_MX/: .mxproject  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  st.txt  test_MX.ioc
Testing/test_MX/Core/Inc/: stm32f0xx_hal_conf.h
Testing/test_MX/Core/Src/: main.c
Testing/test_MX/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
main_8x8/: main_8x8.ino
main_8x8/serv/: serv.ino
read_pin/: read_pin.ino
